fix(Interactive): change `z-index` of background image

--- a/src/components/interactive/_interactive.scss
+++ b/src/components/interactive/_interactive.scss
@@ -7,7 +7,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        z-index: -1;
+        z-index: 0;
         width: 100%;
         height: 100%;
         background-color: colour(white);
@@ -22,7 +22,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        z-index: 0;
+        z-index: 1;
         width: 100%;
         height: 100%;
         background: colour(news-support-3);
@@ -33,7 +33,7 @@
         display: flex;
         flex-flow: column nowrap;
         position: relative;
-        z-index: 1;
+        z-index: 2;
         height: 100%;
 
         > * {
